testsuite/tests/properties/invalid_node_builder/spurious_kwarg.lkt
import common_empty

class Example: BaseExample {
    @lazy prop: EmptyNode = EmptyNode.builder(foo=null[FooNode]).build()
}
